remove useless stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,4 @@
-
-<table class="">
+<table>
   <tr>
     <th>Name</th>
     <th>Money</th> 
@@ -15,5 +14,4 @@
     <td>{{ user.money | amount:102:'Tablet' }}</td>
     <td>{{ user.phone | phoneNumber }}</td>
   </tr>
-
 </table>
