--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,6 +12,6 @@
     <td>{{ user.money }}$</td>
     <td>{{ user.money | amount:540:'TV' }}</td>
     <td>{{ user.money | amount:102:'Tablet' }}</td>
-    <td>{{ user.phone | phoneNumber }}</td>
+    <td>{{ user.phone | phone }}</td>
   </tr>
 </table>
